packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_qwik_react.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { componentQrl, inlinedQrl, useLexicalScope, useHostElement, useStore, useTaskQrl, noSerialize, SkipRerender, implicit$FirstArg } from '@decoration/qwik';
import { jsx, Fragment } from '@decoration/qwik/jsx-runtime';
import { isBrowser, isServer } from '@decoration/qwik/build';

function qwikifyQrl(reactCmpQrl) {
    return /*#__PURE__*/ componentQrl(inlinedQrl((props)=>{
        const [reactCmpQrl] = useLexicalScope();
        const hostElement = useHostElement();
        const store = useStore({});
        let run;
        if (props['client:visible']) run = 'visible';
        else if (props['client:load'] || props['client:only']) run = 'load';
        useTaskQrl(inlinedQrl(async (track)=>{
            const [hostElement, props, reactCmpQrl, store] = useLexicalScope();
            track(props);
            if (isBrowser) {
                if (store.data) store.data.root.render(store.data.client.Main(store.data.cmp, filterProps(props)));
                else {
                    const [Cmp, client] = await Promise.all([
                        reactCmpQrl.resolve(),
                        import('./client-f762f78c.js')
                    ]);
                    let root;
                    if (hostElement.childElementCount > 0) root = client.hydrateRoot(hostElement, client.Main(Cmp, filterProps(props), store.event));
                    else {
                        root = client.createRoot(hostElement);
                        root.render(client.Main(Cmp, filterProps(props)));
                    }
                    store.data = noSerialize({
                        client,
                        cmp: Cmp,
                        root
                    });
                }
            }
        }, "qwikifyQrl_component_useWatch_x04JC5xeP1U", [
            hostElement,
            props,
            reactCmpQrl,
            store
        ]), {
            run
        });
        if (isServer && !props['client:only']) {
            const jsx$1 = Promise.all([
                reactCmpQrl.resolve(),
                import('./server-9ac6caad.js')
            ]).then(([Cmp, server])=>{
                const html = server.render(Cmp, filterProps(props));
                return /*#__PURE__*/ jsx(Host, {
                    dangerouslySetInnerHTML: html,
                    [_IMMUTABLE]: [
                        "dangerouslySetInnerHTML"
                    ]
                });
            });
            return /*#__PURE__*/ jsx(Fragment, {
                children: jsx$1
            });
        }
        return /*#__PURE__*/ jsx(Host, {
            children: /*#__PURE__*/ jsx(SkipRerender, {})
        });
    }, "qwikifyQrl_component_zH94hIe0Ick", [
        reactCmpQrl
    ]), {
        tagName: 'qwik-wrap'
    });
}
const filterProps = (props)=>{
    const obj = {};
    Object.keys(props).forEach((key)=>{
        if (!key.startsWith('client:')) obj[key] = props[key];
    });
    return obj;
};
const qwikify$ = implicit$FirstArg(qwikifyQrl);

async function renderToString(rootNode, opts) {
    const mod = await import('./server-9ac6caad.js');
    const result = await mod.renderToString(rootNode, opts);
    const styles = mod.getGlobalStyleTag(result.html);
    const finalHtml = styles + result.html;
    return {
        ...result,
        html: finalHtml
    };
}

export { qwikify$, qwikifyQrl, renderToString };
        
============================= qwikifyqrl_component_usewatch_x04jc5xep1u.mjs (ENTRY POINT)==

import { _auto_filterProps as filterProps } from "../node_modules/@decoration/qwik-react/index.qwik.mjs";
import { isBrowser } from "@decoration/qwik/build";
import { noSerialize } from "@decoration/qwik";
import { useLexicalScope } from "@decoration/qwik";
export const qwikifyQrl_component_useWatch_x04JC5xeP1U = async (track)=>{
    const [hostElement, props, reactCmpQrl, store] = useLexicalScope();
    track(props);
    if (isBrowser) {
        if (store.data) store.data.root.render(store.data.client.Main(store.data.cmp, filterProps(props)));
        else {
            const [Cmp, client] = await Promise.all([
                reactCmpQrl.resolve(),
                import("../node_modules/@decoration/qwik-react/client-f762f78c.js")
            ]);
            let root;
            if (hostElement.childElementCount > 0) root = client.hydrateRoot(hostElement, client.Main(Cmp, filterProps(props), store.event));
            else {
                root = client.createRoot(hostElement);
                root.render(client.Main(Cmp, filterProps(props)));
            }
            store.data = noSerialize({
                client,
                cmp: Cmp,
                root
            });
        }
    }
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/node_modules/@decoration/qwik-react/index.qwik.mjs\"],\"names\":[],\"mappings\":\";;;;yDAa8B,OAAO,QAAQ;IACjC,MAAM,CAAC,aAAa,OAAO,aAAa,MAAM,GAAG;IACjD,MAAM;IACN,IAAI;QACA,IAAI,MAAM,IAAI,EAAE,MAAM,IAAI,CAAC,IAAI,CAAC,MAAM,CAAC,MAAM,IAAI,CAAC,MAAM,CAAC,IAAI,CAAC,MAAM,IAAI,CAAC,GAAG,EAAE,YAAY;aACrF;YACD,MAAM,CAAC,KAAK,OAAO,GAAG,MAAM,QAAQ,GAAG,CAAC;gBACpC,YAAY,OAAO;gBACnB,MAAM,CAAC;aACV;YACD,IAAI;YACJ,IAAI,YAAY,iBAAiB,GAAG,GAAG,OAAO,OAAO,WAAW,CAAC,aAAa,OAAO,IAAI,CAAC,KAAK,YAAY,QAAQ,MAAM,KAAK;iBACzH;gBACD,OAAO,OAAO,UAAU,CAAC;gBACzB,KAAK,MAAM,CAAC,OAAO,IAAI,CAAC,KAAK,YAAY;YAC7C,CAAC;YACD,MAAM,IAAI,GAAG,YAAY;gBACrB;gBACA,KAAK;gBACL;YACJ;QACJ,CAAC;KACJ;AACL\"}")
/*
{
  "origin": "../node_modules/@decoration/qwik-react/index.qwik.mjs",
  "name": "qwikifyQrl_component_useWatch_x04JC5xeP1U",
  "entry": null,
  "displayName": "qwikifyQrl_component_useWatch",
  "hash": "x04JC5xeP1U",
  "canonicalFilename": "qwikifyqrl_component_usewatch_x04jc5xep1u",
  "extension": "mjs",
  "parent": "qwikifyQrl_component_zH94hIe0Ick",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": true,
  "loc": [
    693,
    1746
  ]
}
*/
============================= qwikifyqrl_component_zh94hie0ick.mjs (ENTRY POINT)==

import { Fragment } from "@decoration/qwik/jsx-runtime";
import { SkipRerender } from "@decoration/qwik";
import { _jsxBranch } from "@decoration/qwik";
import { _jsxC } from "@decoration/qwik";
import { _auto_filterProps as filterProps } from "../node_modules/@decoration/qwik-react/index.qwik.mjs";
import { isServer } from "@decoration/qwik/build";
import { qrl } from "@decoration/qwik";
import { useHostElement } from "@decoration/qwik";
import { useLexicalScope } from "@decoration/qwik";
import { useStore } from "@decoration/qwik";
import { useTaskQrl } from "@decoration/qwik";
export const qwikifyQrl_component_zH94hIe0Ick = (props)=>{
    _jsxBranch();
    const [reactCmpQrl] = useLexicalScope();
    const hostElement = useHostElement();
    const store = useStore({});
    let run;
    if (props['client:visible']) run = 'visible';
    else if (props['client:load'] || props['client:only']) run = 'load';
    useTaskQrl(/*#__PURE__*/ qrl(()=>import("./qwikifyqrl_component_usewatch_x04jc5xep1u.mjs"), "qwikifyQrl_component_useWatch_x04JC5xeP1U", [
        hostElement,
        props,
        reactCmpQrl,
        store
    ]), {
        run
    });
    if (isServer && !props['client:only']) {
        const jsx$1 = Promise.all([
            reactCmpQrl.resolve(),
            import("../node_modules/@decoration/qwik-react/server-9ac6caad.js")
        ]).then(([Cmp, server])=>{
            const html = server.render(Cmp, filterProps(props));
            return /*#__PURE__*/ _jsxC(Host, {
                dangerouslySetInnerHTML: html,
                [_IMMUTABLE]: [
                    "dangerouslySetInnerHTML"
                ]
            }, 3, "Ze_0");
        });
        return /*#__PURE__*/ _jsxC(Fragment, {
            children: jsx$1
        }, 1, "Ze_1");
    }
    return /*#__PURE__*/ _jsxC(Host, {
        children: /*#__PURE__*/ _jsxC(SkipRerender, null, 3, "Ze_2")
    }, 1, "Ze_3");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/node_modules/@decoration/qwik-react/index.qwik.mjs\"],\"names\":[],\"mappings\":\";;;;;;;;;;;gDAMiD,CAAC,QAAQ;;IAClD,MAAM,CAAC,YAAY,GAAG;IACtB,MAAM,cAAc;IACpB,MAAM,QAAQ,SAAS,CAAC;IACxB,IAAI;IACJ,IAAI,KAAK,CAAC,iBAAiB,EAAE,MAAM;SAC9B,IAAI,KAAK,CAAC,cAAc,IAAI,KAAK,CAAC,cAAc,EAAE,MAAM;IAC7D;;;;;QA4BI;QACA;IACJ;IACA,IAAI,YAAY,CAAC,KAAK,CAAC,cAAc,EAAE;QACnC,MAAM,QAAQ,QAAQ,GAAG,CAAC;YACtB,YAAY,OAAO;YACnB,MAAM,CAAC;SACV,EAAE,IAAI,CAAC,CAAC,CAAC,KAAK,OAAO,GAAG;YACrB,MAAM,OAAO,OAAO,MAAM,CAAC,KAAK,YAAY;YAC5C,OAAO,WAAW,GAAG,MAAI;gBACrB,yBAAyB;gBACzB,CAAC,WAAW,EAAE;oBACV;iBACH;;QAET;QACA,OAAO,WAAW,GAAG,MAAI;YACrB,UAAU;;IAElB,CAAC;IACD,OAAO,WAAW,GAAG,MAAI;QACrB,UAAU,WAAW,GAAG,MAAI;;AAEpC\"}")
/*
{
  "origin": "../node_modules/@decoration/qwik-react/index.qwik.mjs",
  "name": "qwikifyQrl_component_zH94hIe0Ick",
  "entry": null,
  "displayName": "qwikifyQrl_component",
  "hash": "zH94hIe0Ick",
  "canonicalFilename": "qwikifyqrl_component_zh94hie0ick",
  "extension": "mjs",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": true,
  "loc": [
    373,
    2674
  ]
}
*/
============================= ../node_modules/@decoration/qwik-react/index.qwik.mjs ==

import { qrl } from "@decoration/qwik";
import { componentQrl, implicit$FirstArg } from '@decoration/qwik';
function qwikifyQrl(reactCmpQrl) {
    return /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("../../../src/qwikifyqrl_component_zh94hie0ick.mjs"), "qwikifyQrl_component_zH94hIe0Ick", [
        reactCmpQrl
    ]), {
        tagName: 'qwik-wrap'
    });
}
const filterProps = (props)=>{
    const obj = {};
    Object.keys(props).forEach((key)=>{
        if (!key.startsWith('client:')) obj[key] = props[key];
    });
    return obj;
};
const qwikify$ = implicit$FirstArg(qwikifyQrl);
async function renderToString(rootNode, opts) {
    const mod = await import('./server-9ac6caad.js');
    const result = await mod.renderToString(rootNode, opts);
    const styles = mod.getGlobalStyleTag(result.html);
    const finalHtml = styles + result.html;
    return {
        ...result,
        html: finalHtml
    };
}
export { qwikify$, qwikifyQrl, renderToString };
export { filterProps as _auto_filterProps };


Some("{\"version\":3,\"sources\":[\"/user/qwik/node_modules/@decoration/qwik-react/index.qwik.mjs\"],\"names\":[],\"mappings\":\";AACA,SAAS,YAAY,EAAgG,iBAAiB,QAAQ,mBAAmB;AAIjK,SAAS,WAAW,WAAW,EAAE;IAC7B,OAAO,WAAW,GAAG;;QA4DjB;QACA,SAAS;IACb;AACJ;AACA,MAAM,cAAc,CAAC,QAAQ;IACzB,MAAM,MAAM,CAAC;IACb,OAAO,IAAI,CAAC,OAAO,OAAO,CAAC,CAAC,MAAM;QAC9B,IAAI,CAAC,IAAI,UAAU,CAAC,YAAY,GAAG,CAAC,IAAI,GAAG,KAAK,CAAC,IAAI;IACzD;IACA,OAAO;AACX;AACA,MAAM,WAAW,kBAAkB;AAEnC,eAAe,eAAe,QAAQ,EAAE,IAAI,EAAE;IAC1C,MAAM,MAAM,MAAM,MAAM,CAAC;IACzB,MAAM,SAAS,MAAM,IAAI,cAAc,CAAC,UAAU;IAClD,MAAM,SAAS,IAAI,iBAAiB,CAAC,OAAO,IAAI;IAChD,MAAM,YAAY,SAAS,OAAO,IAAI;IACtC,OAAO;QACH,GAAG,MAAM;QACT,MAAM;IACV;AACJ;AAEA,SAAS,QAAQ,EAAE,UAAU,EAAE,cAAc,GAAG\"}")
== DIAGNOSTICS ==

[]
