packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_reg_ctx_name_hooks.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { $, component$, server$ } from '@decoration/qwik';
import { foo } from './foo';
export const Works = component$((props) => {
    const text = 'hola';
    return (
        <>
        <div onClick$={server$(() => console.log('in server', text))}></div>
        <div onClick$={() => foo()}></div>
        </>
    );
});

============================= test.js ==

import "./foo";
import { componentQrl } from "@decoration/qwik";
import { serverQrl } from "@decoration/qwik";
import { _regSymbol } from "@decoration/qwik";
import { inlinedQrl } from "@decoration/qwik";
import { _jsxQ } from "@decoration/qwik";
import { _noopQrl } from "@decoration/qwik";
import { _jsxC } from "@decoration/qwik";
import { Fragment as _Fragment } from "@decoration/qwik/jsx-runtime";
export const Works = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl((props)=>{
    return /*#__PURE__*/ _jsxC(_Fragment, {
        children: [
            /*#__PURE__*/ _jsxQ("div", {
                onClick$: serverQrl(/*#__PURE__*/ inlinedQrl(/*#__PURE__*/ _regSymbol(()=>console.log('in server', 'hola'), "07DGQ0fITXs"), "Works_component__Fragment_div_onClick_server_07DGQ0fITXs"))
            }, null, null, 2, null),
            /*#__PURE__*/ _jsxQ("div", null, {
                onClick$: /*#__PURE__*/ _noopQrl("Works_component__Fragment_div_onClick_YhOCqfqU0Rc")
            }, null, 3, null)
        ]
    }, 1, "u6_0");
}, "Works_component_t45qL4vNGv0"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;;;AAGA,OAAO,MAAM,sBAAQ,sCAAW,CAAC,QAAU;IAEvC,qBACI;;0BACA,MAAC;gBAAI,UAAU,4DAAQ,IAAM,QAAQ,GAAG,CAAC,aAHhC;;0BAIT,MAAC;gBAAI,QAAQ;;;;AAGrB,mCAAG\"}")
== DIAGNOSTICS ==

[]
