packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_reg_ctx_name_hooks_inlined.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { $, component$, server$ } from '@decoration/qwik';
export const Works = component$((props) => {
    const text = 'hola';
    return (
        <div onClick$={server$(() => console.log('in server', text))}></div>
    );
});

============================= test.js ==

import { componentQrl } from "@decoration/qwik";
import { serverQrl } from "@decoration/qwik";
import { _regSymbol } from "@decoration/qwik";
import { inlinedQrl } from "@decoration/qwik";
import { _jsxQ } from "@decoration/qwik";
export const Works = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl((props)=>{
    return /*#__PURE__*/ _jsxQ("div", {
        onClick$: serverQrl(/*#__PURE__*/ inlinedQrl(/*#__PURE__*/ _regSymbol(()=>console.log('in server', 'hola'), "OsNoEFc5SM4"), "Works_component_div_onClick_server_OsNoEFc5SM4"))
    }, null, null, 2, "u6_0");
}, "Works_component_t45qL4vNGv0"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAEA,OAAO,MAAM,sBAAQ,sCAAW,CAAC,QAAU;IAEvC,qBACI,MAAC;QAAI,UAAU,4DAAQ,IAAM,QAAQ,GAAG,CAAC,aAFhC;;AAIjB,mCAAG\"}")
== DIAGNOSTICS ==

[]
